gen/axiom/parser/AxiomParser.py
# Generated from axiom/parser/Axiom.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AxiomParser ( Parser ):

    grammarFileName = "Axiom.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "':'", "'-'", "'String'", "'Float'", 
                     "'Int'", "'Boolean'", "'<'", "'>'", "'true'", "'false'", 
                     "'import'", "'from'", "'meta'", "'persona'", "'rules'", 
                     "'interface'", "'types'", "'struct'", "'inputs'", "'outputs'", 
                     "'config'", "'payload'", "'tests'", "'test'", "'expected_output'", 
                     "'assert'", "'Enum'", "'List'", "'{'", "'}'", "'('", 
                     "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "IMPORT", "FROM", "META", "PERSONA", "RULES", "INTERFACE", 
                      "TYPES", "STRUCT", "INPUTS", "OUTPUTS", "CONFIG", 
                      "PAYLOAD", "TESTS", "TEST", "EXPECTED_OUTPUT", "ASSERT", 
                      "ENUM", "LIST", "LBRACE", "RBRACE", "LPAR", "RPAR", 
                      "ID", "STRING", "SIGNED_NUMBER", "MULTILINE_CONTENT", 
                      "WS", "COMMENT" ]

    RULE_prompt = 0
    RULE_import_statement = 1
    RULE_import_key = 2
    RULE_block = 3
    RULE_meta_block = 4
    RULE_meta_field = 5
    RULE_persona_block = 6
    RULE_rules_block = 7
    RULE_rule_item = 8
    RULE_interface_block = 9
    RULE_interface_body = 10
    RULE_types_block = 11
    RULE_struct_def = 12
    RULE_inputs_block = 13
    RULE_outputs_block = 14
    RULE_field_def = 15
    RULE_directive_block = 16
    RULE_directive_pair = 17
    RULE_type_def = 18
    RULE_primitive_type = 19
    RULE_enum_def = 20
    RULE_list_def = 21
    RULE_config_block = 22
    RULE_config_field = 23
    RULE_payload_block = 24
    RULE_tests_block = 25
    RULE_test_case = 26
    RULE_test_field = 27
    RULE_inputs_test_block = 28
    RULE_inputs_test_pair = 29
    RULE_expected_output_block = 30
    RULE_assert_block = 31
    RULE_assert_item = 32
    RULE_value = 33
    RULE_json_object = 34
    RULE_json_pair = 35

    ruleNames =  [ "prompt", "import_statement", "import_key", "block", 
                   "meta_block", "meta_field", "persona_block", "rules_block", 
                   "rule_item", "interface_block", "interface_body", "types_block", 
                   "struct_def", "inputs_block", "outputs_block", "field_def", 
                   "directive_block", "directive_pair", "type_def", "primitive_type", 
                   "enum_def", "list_def", "config_block", "config_field", 
                   "payload_block", "tests_block", "test_case", "test_field", 
                   "inputs_test_block", "inputs_test_pair", "expected_output_block", 
                   "assert_block", "assert_item", "value", "json_object", 
                   "json_pair" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    IMPORT=12
    FROM=13
    META=14
    PERSONA=15
    RULES=16
    INTERFACE=17
    TYPES=18
    STRUCT=19
    INPUTS=20
    OUTPUTS=21
    CONFIG=22
    PAYLOAD=23
    TESTS=24
    TEST=25
    EXPECTED_OUTPUT=26
    ASSERT=27
    ENUM=28
    LIST=29
    LBRACE=30
    RBRACE=31
    LPAR=32
    RPAR=33
    ID=34
    STRING=35
    SIGNED_NUMBER=36
    MULTILINE_CONTENT=37
    WS=38
    COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PromptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AxiomParser.EOF, 0)

        def import_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxiomParser.Import_statementContext)
            else:
                return self.getTypedRuleContext(AxiomParser.Import_statementContext,i)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxiomParser.BlockContext)
            else:
                return self.getTypedRuleContext(AxiomParser.BlockContext,i)


        def getRuleIndex(self):
            return AxiomParser.RULE_prompt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrompt" ):
                return visitor.visitPrompt(self)
            else:
                return visitor.visitChildren(self)




    def prompt(self):

        localctx = AxiomParser.PromptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prompt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==12:
                self.state = 72
                self.import_statement()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 29868032) != 0):
                self.state = 78
                self.block()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(AxiomParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_statementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(AxiomParser.IMPORT, 0)

        def LBRACE(self):
            return self.getToken(AxiomParser.LBRACE, 0)

        def import_key(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxiomParser.Import_keyContext)
            else:
                return self.getTypedRuleContext(AxiomParser.Import_keyContext,i)


        def RBRACE(self):
            return self.getToken(AxiomParser.RBRACE, 0)

        def FROM(self):
            return self.getToken(AxiomParser.FROM, 0)

        def STRING(self):
            return self.getToken(AxiomParser.STRING, 0)

        def getRuleIndex(self):
            return AxiomParser.RULE_import_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_statement" ):
                return visitor.visitImport_statement(self)
            else:
                return visitor.visitChildren(self)




    def import_statement(self):

        localctx = AxiomParser.Import_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_import_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(AxiomParser.IMPORT)
            self.state = 87
            self.match(AxiomParser.LBRACE)
            self.state = 88
            self.import_key()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 89
                self.match(AxiomParser.T__0)
                self.state = 90
                self.import_key()
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            self.match(AxiomParser.RBRACE)
            self.state = 97
            self.match(AxiomParser.FROM)
            self.state = 98
            self.match(AxiomParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_keyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPES(self):
            return self.getToken(AxiomParser.TYPES, 0)

        def RULES(self):
            return self.getToken(AxiomParser.RULES, 0)

        def getRuleIndex(self):
            return AxiomParser.RULE_import_key

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_key" ):
                return visitor.visitImport_key(self)
            else:
                return visitor.visitChildren(self)




    def import_key(self):

        localctx = AxiomParser.Import_keyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_import_key)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not(_la==16 or _la==18):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def meta_block(self):
            return self.getTypedRuleContext(AxiomParser.Meta_blockContext,0)


        def persona_block(self):
            return self.getTypedRuleContext(AxiomParser.Persona_blockContext,0)


        def rules_block(self):
            return self.getTypedRuleContext(AxiomParser.Rules_blockContext,0)


        def interface_block(self):
            return self.getTypedRuleContext(AxiomParser.Interface_blockContext,0)


        def config_block(self):
            return self.getTypedRuleContext(AxiomParser.Config_blockContext,0)


        def payload_block(self):
            return self.getTypedRuleContext(AxiomParser.Payload_blockContext,0)


        def tests_block(self):
            return self.getTypedRuleContext(AxiomParser.Tests_blockContext,0)


        def types_block(self):
            return self.getTypedRuleContext(AxiomParser.Types_blockContext,0)


        def getRuleIndex(self):
            return AxiomParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = AxiomParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_block)
        try:
            self.state = 110
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [14]:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.meta_block()
                pass
            elif token in [15]:
                self.enterOuterAlt(localctx, 2)
                self.state = 103
                self.persona_block()
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 3)
                self.state = 104
                self.rules_block()
                pass
            elif token in [17]:
                self.enterOuterAlt(localctx, 4)
                self.state = 105
                self.interface_block()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 5)
                self.state = 106
                self.config_block()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 6)
                self.state = 107
                self.payload_block()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 7)
                self.state = 108
                self.tests_block()
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 8)
                self.state = 109
                self.types_block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Meta_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def META(self):
            return self.getToken(AxiomParser.META, 0)

        def LBRACE(self):
            return self.getToken(AxiomParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(AxiomParser.RBRACE, 0)

        def meta_field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxiomParser.Meta_fieldContext)
            else:
                return self.getTypedRuleContext(AxiomParser.Meta_fieldContext,i)


        def getRuleIndex(self):
            return AxiomParser.RULE_meta_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMeta_block" ):
                return visitor.visitMeta_block(self)
            else:
                return visitor.visitChildren(self)




    def meta_block(self):

        localctx = AxiomParser.Meta_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_meta_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(AxiomParser.META)
            self.state = 113
            self.match(AxiomParser.LBRACE)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 114
                self.meta_field()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 120
            self.match(AxiomParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Meta_fieldContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AxiomParser.ID, 0)

        def STRING(self):
            return self.getToken(AxiomParser.STRING, 0)

        def getRuleIndex(self):
            return AxiomParser.RULE_meta_field

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMeta_field" ):
                return visitor.visitMeta_field(self)
            else:
                return visitor.visitChildren(self)




    def meta_field(self):

        localctx = AxiomParser.Meta_fieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_meta_field)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(AxiomParser.ID)
            self.state = 123
            self.match(AxiomParser.T__1)
            self.state = 124
            self.match(AxiomParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Persona_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PERSONA(self):
            return self.getToken(AxiomParser.PERSONA, 0)

        def STRING(self):
            return self.getToken(AxiomParser.STRING, 0)

        def getRuleIndex(self):
            return AxiomParser.RULE_persona_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPersona_block" ):
                return visitor.visitPersona_block(self)
            else:
                return visitor.visitChildren(self)




    def persona_block(self):

        localctx = AxiomParser.Persona_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_persona_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(AxiomParser.PERSONA)
            self.state = 127
            self.match(AxiomParser.T__1)
            self.state = 128
            self.match(AxiomParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rules_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RULES(self):
            return self.getToken(AxiomParser.RULES, 0)

        def LBRACE(self):
            return self.getToken(AxiomParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(AxiomParser.RBRACE, 0)

        def rule_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxiomParser.Rule_itemContext)
            else:
                return self.getTypedRuleContext(AxiomParser.Rule_itemContext,i)


        def getRuleIndex(self):
            return AxiomParser.RULE_rules_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRules_block" ):
                return visitor.visitRules_block(self)
            else:
                return visitor.visitChildren(self)




    def rules_block(self):

        localctx = AxiomParser.Rules_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_rules_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(AxiomParser.RULES)
            self.state = 131
            self.match(AxiomParser.LBRACE)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 132
                self.rule_item()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 138
            self.match(AxiomParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rule_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(AxiomParser.STRING, 0)

        def getRuleIndex(self):
            return AxiomParser.RULE_rule_item

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRule_item" ):
                return visitor.visitRule_item(self)
            else:
                return visitor.visitChildren(self)




    def rule_item(self):

        localctx = AxiomParser.Rule_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_rule_item)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(AxiomParser.T__2)
            self.state = 141
            self.match(AxiomParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Interface_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTERFACE(self):
            return self.getToken(AxiomParser.INTERFACE, 0)

        def LBRACE(self):
            return self.getToken(AxiomParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(AxiomParser.RBRACE, 0)

        def interface_body(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxiomParser.Interface_bodyContext)
            else:
                return self.getTypedRuleContext(AxiomParser.Interface_bodyContext,i)


        def getRuleIndex(self):
            return AxiomParser.RULE_interface_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterface_block" ):
                return visitor.visitInterface_block(self)
            else:
                return visitor.visitChildren(self)




    def interface_block(self):

        localctx = AxiomParser.Interface_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_interface_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(AxiomParser.INTERFACE)
            self.state = 144
            self.match(AxiomParser.LBRACE)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3407872) != 0):
                self.state = 145
                self.interface_body()
                self.state = 150
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 151
            self.match(AxiomParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Interface_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def types_block(self):
            return self.getTypedRuleContext(AxiomParser.Types_blockContext,0)


        def inputs_block(self):
            return self.getTypedRuleContext(AxiomParser.Inputs_blockContext,0)


        def outputs_block(self):
            return self.getTypedRuleContext(AxiomParser.Outputs_blockContext,0)


        def getRuleIndex(self):
            return AxiomParser.RULE_interface_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInterface_body" ):
                return visitor.visitInterface_body(self)
            else:
                return visitor.visitChildren(self)




    def interface_body(self):

        localctx = AxiomParser.Interface_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_interface_body)
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.types_block()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.inputs_block()
                pass
            elif token in [21]:
                self.enterOuterAlt(localctx, 3)
                self.state = 155
                self.outputs_block()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Types_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPES(self):
            return self.getToken(AxiomParser.TYPES, 0)

        def LBRACE(self):
            return self.getToken(AxiomParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(AxiomParser.RBRACE, 0)

        def struct_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxiomParser.Struct_defContext)
            else:
                return self.getTypedRuleContext(AxiomParser.Struct_defContext,i)


        def getRuleIndex(self):
            return AxiomParser.RULE_types_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypes_block" ):
                return visitor.visitTypes_block(self)
            else:
                return visitor.visitChildren(self)




    def types_block(self):

        localctx = AxiomParser.Types_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_types_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(AxiomParser.TYPES)
            self.state = 159
            self.match(AxiomParser.LBRACE)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 160
                self.struct_def()
                self.state = 165
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 166
            self.match(AxiomParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Struct_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRUCT(self):
            return self.getToken(AxiomParser.STRUCT, 0)

        def ID(self):
            return self.getToken(AxiomParser.ID, 0)

        def LBRACE(self):
            return self.getToken(AxiomParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(AxiomParser.RBRACE, 0)

        def field_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxiomParser.Field_defContext)
            else:
                return self.getTypedRuleContext(AxiomParser.Field_defContext,i)


        def getRuleIndex(self):
            return AxiomParser.RULE_struct_def

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStruct_def" ):
                return visitor.visitStruct_def(self)
            else:
                return visitor.visitChildren(self)




    def struct_def(self):

        localctx = AxiomParser.Struct_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_struct_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(AxiomParser.STRUCT)
            self.state = 169
            self.match(AxiomParser.ID)
            self.state = 170
            self.match(AxiomParser.LBRACE)
            self.state = 174
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 171
                self.field_def()
                self.state = 176
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 177
            self.match(AxiomParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Inputs_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INPUTS(self):
            return self.getToken(AxiomParser.INPUTS, 0)

        def LBRACE(self):
            return self.getToken(AxiomParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(AxiomParser.RBRACE, 0)

        def field_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxiomParser.Field_defContext)
            else:
                return self.getTypedRuleContext(AxiomParser.Field_defContext,i)


        def getRuleIndex(self):
            return AxiomParser.RULE_inputs_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInputs_block" ):
                return visitor.visitInputs_block(self)
            else:
                return visitor.visitChildren(self)




    def inputs_block(self):

        localctx = AxiomParser.Inputs_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_inputs_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 179
            self.match(AxiomParser.INPUTS)
            self.state = 180
            self.match(AxiomParser.LBRACE)
            self.state = 184
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 181
                self.field_def()
                self.state = 186
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 187
            self.match(AxiomParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Outputs_blockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OUTPUTS(self):
            return self.getToken(AxiomParser.OUTPUTS, 0)

        def LBRACE(self):
            return self.getToken(AxiomParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(AxiomParser.RBRACE, 0)

        def field_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxiomParser.Field_defContext)
            else:
                return self.getTypedRuleContext(AxiomParser.Field_defContext,i)


        def getRuleIndex(self):
            return AxiomParser.RULE_outputs_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOutputs_block" ):
                return visitor.visitOutputs_block(self)
            else:
                return visitor.visitChildren(self)




    def outputs_block(self):

        localctx = AxiomParser.Outputs_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_outputs_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 189
            self.match(AxiomParser.OUTPUTS)
            self.state = 190
            self.match(AxiomParser.LBRACE)
            self.state = 194
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==34:
                self.state = 191
                self.field_def()
                self.state = 196
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 197
            self.match(AxiomParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Field_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(AxiomParser.ID, 0)

        def type_def(self):
            return self.getTypedRuleContext(AxiomParser.Type_defContext,0)


        def directive_block(self):
            return self.getTypedRuleContext(AxiomParser.Directive_blockContext,0)


        def getRuleIndex(self):
            return AxiomParser.RULE_field_def

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitField_def" ):
                return visitor.visitField_def(self)
            else:
                return visitor.visitChildren(self)




    def field_def(self):
